crates/cox-tui/tests/snapshots/agents__agents_cards_snapshot.snap
---
source: crates/cox-tui/tests/agents.rs
expression: text
---
01ARZ3NDEKTSV4RRFFQ69G5FAV
  preset - · tier - · cost - · elapsed - · active

01BX5ZZKBKACTAV9WEVGEMMVRZ
  preset - · tier - · cost - · elapsed - · waiting

explore: find the flaky test
  preset explore · tier cheap · cost - · elapsed 0.7s · running
