crates/cox-tui/tests/snapshots/agents__agents_overlay_list.snap
---
source: crates/cox-tui/tests/agents.rs
assertion_line: 118
expression: "buffer_to_string(&render(&state, 60, 10))"
---
 ▸ 01ARZ3NDEKTSV4RRFFQ69G5FAV · preset - · tier - · cost - ·
   01BX5ZZKBKACTAV9WEVGEMMVRZ · preset - · tier - · cost - ·






> Esc close · PageUp scroll up · PageDown scroll down
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default] · 2 agents!
