crates/cox-tui/tests/snapshots/agents__agents_overlay_shows_worktree.snap
---
source: crates/cox-tui/tests/agents.rs
expression: "rows.join(\"\\n\")"
---
01ARZ3NDEKTSV4RRFFQ69G5FAV · preset - · tier - · cost - · elapsed - · active · ⧉ w-t44
01BX5ZZKBKACTAV9WEVGEMMVRZ · preset - · tier - · cost - · elapsed - · waiting
