crates/cox-tui/tests/snapshots/agents__task_message_adds_a_last_message_line_to_the_agents_card.snap
---
source: crates/cox-tui/tests/agents.rs
expression: "rows.join(\"\\n\")"
---
explore: find the flaky test · preset explore · tier cheap · cost - · elapsed 0.7s · running · last: found it: flaky_sleep in tests/shell.rs
